Спринт 9: code style